2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am: Rename some
	files to not conflict with other named icons in other
	directories.

2007-07-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/app.h:
	* src/icon.c: (set_icon_state), (tray_icon_init):
	* src/main.c: (main):
	* src/menu.c: (about_activated):
	* ui/Makefile.am:
	* ui/icons/16x16/Makefile.am:
	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/Makefile.am:
	* ui/icons/22x22/status/Makefile.am:
	* ui/icons/Makefile.am:
	* ui/phonemgr.glade: New icons from Andreas Nilsson, thanks
	Andreas! (Closes: #455844)

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Don't forget to init GStreamer, if we want
	to play sounds
	* src/ui.c: (play_sound), (idle_play_alert),
	(set_dependent_widget), (create_send_dialog), (ui_init): Don't crash
	if we can't create an audiosink, only pass absolute filenames to
	the play_sound function, don't set the bluetooth radio button unsensitive
	if we switch to another type of connection

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Creating the listener can't fail,
	init the icons before any UI bits

	* src/icon.c: (icon_init): Set a default window icon

	* src/phonemgr-chooser-button.c: (choose_bdaddr),
	(phonemgr_chooser_button_finalize): Don't change the device
	selected if there was already one, and we click cancel,
	parent the dialog properly to the preferences window, and
	kill the dialog when we exit

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/connection.c: (set_connection_device), (connect_phone),
	(reconnect_phone): Only reconnect to the phone if the device
	we're connecting to really changed

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd

	* src/app.h:
	* src/main.c: (main): Remove the BtctlController, and move it
	into the chooser widget

	* src/phonemgr-chooser-button.*: