@@ -33,18 +33,18 @@ set_icon_state (MyApp *app)
 	if (app->listener && phonemgr_listener_connected (app->listener)) {
 		gtk_widget_set_sensitive (app->send_item, TRUE);
 		if (app->messages) {
-			gtk_status_icon_set_from_icon_name (app->tray_icon, "message");
+			gtk_status_icon_set_from_icon_name (app->tray_icon, "phone-message");
 			gtk_status_icon_set_tooltip (app->tray_icon, _("Message arrived"));
 		} else {
 			gtk_status_icon_set_from_icon_name (app->tray_icon, "phone");
 			gtk_status_icon_set_tooltip (app->tray_icon, _("Connected"));
 		}
 	} else if (app->connecting) {
-		gtk_status_icon_set_from_icon_name (app->tray_icon, "connecting");
+		gtk_status_icon_set_from_icon_name (app->tray_icon, "phone-connecting");
 		gtk_status_icon_set_tooltip (app->tray_icon, _("Connecting to phone"));
 		gtk_widget_set_sensitive (app->send_item, FALSE);
 	} else {
-		gtk_status_icon_set_from_icon_name (app->tray_icon, "error");
+		gtk_status_icon_set_from_icon_name (app->tray_icon, "phone-error");
 		gtk_status_icon_set_tooltip (app->tray_icon, _("Not connected"));
 		gtk_widget_set_sensitive (app->send_item, FALSE);
 	}
